--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^4.1.1",
     "@astrojs/rss": "^4.0.12",
-    "astro": "^5.13.10"
+    "astro": "^5.13.10",
+    "preact": "^10.27.2"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
